redis/k8s/deploy/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: redis
  name: redis
  namespace: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - command:
        - "redis-server"
        - "--requirepass $(REDIS_PASSWORD)"
        image: redis:8
        imagePullPolicy: Always
        name: redis-app
        ports:
        - containerPort: 6379
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          subPath: data
          name: redis-volume
          readOnly: false
      restartPolicy: Always
      volumes:
      - name: redis-volume
        persistentVolumeClaim:
          claimName: redis-pvc
